[tool.poetry]
name = "hw-pw-04"
version = "0.1.0"
description = ""
authors = ["tetianakondra <tatjana.ukon@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_pw_04"}]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
